--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -56,6 +56,7 @@
     <Reference Include="DevExpress.CodeRush.Interop, Version=9.2.6.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
     <Reference Include="Extensibility, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.StyleCop">
       <HintPath>..\..\..\..\Program Files\Microsoft StyleCop 4.4.1.2\Microsoft.StyleCop.dll</HintPath>
@@ -70,11 +71,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Design" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="DevExpress.CodeRush.Common" />
     <Reference Include="DevExpress.CodeRush.Core" />
@@ -84,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzedSourceCode.cs" />
+    <Compile Include="CodeIssues\SA1119_StatementMustNotUseUnnecessaryParenthesis.cs" />
     <Compile Include="CodeIssues\SA1402_FileMayOnlyContainASingleClass.cs" />
     <Compile Include="CodeIssues\SA1403_FileMayOnlyContainASingleNamespace.cs" />
     <Compile Include="CodeIssues\SA1503_CurlyBracketsMustNotBeOmitted.cs" />
