--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -83,9 +83,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzedSourceCode.cs" />
+    <Compile Include="CodeIssues\MethodCallCodeIssue.cs" />
     <Compile Include="CodeIssues\SA1119_StatementMustNotUseUnnecessaryParenthesis.cs" />
     <Compile Include="CodeIssues\SA1402_FileMayOnlyContainASingleClass.cs" />
     <Compile Include="CodeIssues\SA1403_FileMayOnlyContainASingleNamespace.cs" />
+    <Compile Include="CodeIssues\SA1404_CodeAnalysisSuppressionMustHaveJustification.cs" />
+    <Compile Include="CodeIssues\SA1405_DebugAssertMustProvideMessageText.cs" />
+    <Compile Include="CodeIssues\SA1406_DebugFailMustProvideMessageText.cs" />
     <Compile Include="CodeIssues\SA1503_CurlyBracketsMustNotBeOmitted.cs" />
     <Compile Include="CodeIssues\SA1627_DocumentationTextMustNotBeEmpty.cs" />
     <Compile Include="CodeIssues\SA1610_PropertyDocumentationMustHaveValueText.cs" />
