--- a/trunk/CodeIssueAnalysis/CodeIssueAnalysis/CodeIssueAnalysis.csproj
+++ b/trunk/CodeIssueAnalysis/CodeIssueAnalysis/CodeIssueAnalysis.csproj
@@ -67,7 +67,9 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraGrid.v6.3, Version=9.3.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DXCore.Parser, Version=10.2.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="DevExpress.DXCore.Platform, Version=10.1.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
